openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: poc-openshift
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8011
