openshift/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  namespace: poc-openshift
spec:
  path: /
  to:
    name: backend-service
    weight: 100
    kind: Service
  host: ''
  port:
    targetPort: 8010
  alternateBackends: []
