openshift/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  namespace: poc-openshift
spec:
  path: /
  to:
    name: frontend-service
    weight: 100
    kind: Service
  host: ''
  port:
    targetPort: 8011
  alternateBackends: []
